[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octivas"
version = "0.1.0"
description = "Python client for the Octivas web scraping and extraction API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Octivas" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/octivas/octivas-python"
Documentation = "https://docs.octivas.com"
Repository = "https://github.com/octivas/octivas-python"

[tool.hatch.build.targets.wheel]
packages = ["src/octivas"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
